[TX-169] Fixed gapping and font size in publication node full page.

--- a/health/sass/components/_paragraphs.scss
+++ b/health/sass/components/_paragraphs.scss
@@ -1,4 +1,3 @@
-// Getting started
 .paragraphs-item-para-links {
   &.hide-title {
     h2 {
@@ -10,7 +9,6 @@
   }
 }
 
-// Contact hot line bar
 .paragraphs-item-para-contact {
   text-align: center;
   p {
@@ -100,6 +98,23 @@
   &.para-row {
     .more-link {
       float: right;
+    }
+  }
+}
+
+// Documents para.
+.paragraphs-items-field-publication-files,
+.field-name-field-publication-nmm-id {
+  > h2 {
+    @include AU-fontgrid( sm );
+    @include AU-space('margin-bottom', 1unit);
+    font-weight: normal;
+  }
+  .paragraphs-item-documents {
+    h3 {
+      @include AU-fontgrid( sm );
+      @include AU-space('margin-bottom', .5unit);
+      font-weight: bold;
     }
   }
 }
